add components folder

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
     <div id="main-container"></div>
     <div id="nav-bar"></div>
-    <div id="item-grid-container"></div>
+    <div id="items-container"></div>
     <div id="footer"></div>
   </body>
 </html>
